# dpack

./: .gitignore  AUTHORS  Config.in  Makefile  Makefile.old  README.rst  TODO  ebuild.mk  mpack-config.h  notes.txt
afl/: Makefile  afl-fix.yang  test-afl.c
python/: pyproject.toml
python/pydpack/: statements.py  types.py  util.py
python/pydpack/modules/: pydpack-extension@2023-03-07.yang  pydpack-types@2023-03-07.yang
python/pydpack/plugin/: dpack.py
python/pydpack/scripts/: pyang_wrapper.py
python/pydpack/templates/: module.c.tmpl  module.h.tmpl  struct_check.c.tmpl  struct_create.c.tmpl  struct_dispatch.c.tmpl  struct_fini.c.tmpl  struct_init.c.tmpl  struct_pack.c.tmpl  struct_unpack.c.tmpl  type_check.c.tmpl  type_check_scalar.c.tmpl  type_check_string.c.tmpl  type_fini_string.c.tmpl  type_getter.c.tmpl  type_has.c.tmpl  type_pack.c.tmpl  type_setter.c.tmpl  type_unpack.c.tmpl
sample/: ebuild.mk  fix_sample.c  fix_sample.h  map_sample.c  map_sample.h  sample-scalar_array.yang  scalar_array_sample.c  scalar_array_sample.h  test-fix_sample.c  test-map_sample.c  test-sample-fix.c  test-sample-scalar_array.c  test-scalar_array_sample.c  test.c  test.h
scripts/: afl.sh  crash.sh  gen_check_confs.py  test-syslog.sh  yang2dpack.sh
sphinx/: Doxyfile  _cdefs.rst  api.rst  conf.py  config.dox  genindex.rst  index.rst  install.rst  license.rst  msgpack.rst
src/: array.c  bin.c  buffer.c  codec.c  common.c  common.h  dpack.c  dpack.h  ebuild.mk  file.c  lvstr.c  map.c  scalar.c  stdint.c  string.c
test/: .string.c.swp  array.c  bin.c  bool.c  double.c  int8.c  (+26 more)
(+23 files in other folders)
