[project]
name = "pydpack"
version = "0.0.1"
description = "pyang plugin to convert yang data to dpack"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pyang",
]

[tool.setuptools]
packages = [
    "pydpack",
    "pydpack.lib",
    "pydpack.plugin"
]

[project.scripts]
yang2dpack = "pydpack.scripts.pyang_wrapper:run"